--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <link rel="stylesheet" type="text/css" href="styles/general.css">
     <link rel="stylesheet" type="text/css" href="styles/transitions.css">
+    <link rel="stylesheet" type="text/css" href="styles/leaflet-encompass.css">
     <link rel="stylesheet" type="text/css" href="styles/skrollr-mq.css">
     <link rel="stylesheet" type="text/css" href="styles/skrollr.css">
     <link rel="stylesheet" type="text/css" href="styles/interactives.css">
