--- a/app/index.html
+++ b/app/index.html
@@ -28,13 +28,17 @@
     <link href='http://fonts.googleapis.com/css?family=Ubuntu+Condensed' rel='stylesheet' type='text/css'>
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="styles/main.css">
-    <link rel="stylesheet" type="text/css" href="styles/general.css">
-    <link rel="stylesheet" type="text/css" href="styles/transitions.css">
-    <link rel="stylesheet" type="text/css" href="styles/leaflet-encompass.css">
+    <link rel="stylesheet" type="text/css" href="styles/baseline.css">
+    <link rel="stylesheet" type="text/css" href="styles/baseline_transitions.css">
+    <link rel="stylesheet" type="text/css" href="styles/baseline_style.css">
+    <link rel="stylesheet" type="text/css" href="styles/navigation.css">
+    <link rel="stylesheet" type="text/css" href="styles/information.css">
     <link rel="stylesheet" type="text/css" href="styles/skrollr-mq.css">
     <link rel="stylesheet" type="text/css" href="styles/skrollr.css">
     <link rel="stylesheet" type="text/css" href="styles/interactives.css">
-    <link rel="stylesheet" type="text/css" href="styles/maps-data.css">
+    <link rel="stylesheet" type="text/css" href="styles/interactives_overlay.css">
+    <link rel="stylesheet" type="text/css" href="styles/map.css">
+    <link rel="stylesheet" type="text/css" href="styles/leaflet-encompass.css">    
     <!-- endbuild -->
 </head>
 
