--- a/app/index.html
+++ b/app/index.html
@@ -89,13 +89,13 @@
                 <p class="info-about">The Aquiferium began as a concept shortly after seeing a presentation by Dr. Suzanne Pierce (University of Texas at Austin) and viewing the MCSDSS application created by the Heat Seeker team for the <a data-ng-href="http://www.encompassproject.org" target="_blank">Encompass Project</a>.</p>
                 <p>
                     <div class="row">
-                        <div class="col-md-4">
-                            <div class="embededVideo info-video">
+                        <div class="col-md-3 info-video">
+                            <div class="embededVideo">
                                 <embed-video data-ng-href="http://www.youtube.com/watch?v=SUhtSnl_ZRM" controls=1 width="100%" height="100%"><a href="http://www.youtube.com/watch?v={{ code }}">Watch</a>
                                 </embed-video>
                             </div>
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-md-9 info-quote">
                             <div class='info-quoted'>
                                 <p>“I believe such an interactive module would not only immediately educate and inform people within our jurisdiction, but could potentially serve as a resource and tool for policy makers as well. The potential seems evident that such a device could be used to demonstrate complicated data (such as modeled outputs) in a manner that is easy to understand for the layperson – which could foster more meaningful discussion during the decision-making process. The Edwards Aquifer Authority looks forward to exploring the possibility of working collaboratively on such a valuable opportunity to motivate, educate, and inspire people about the vitality and fragility of our groundwater resources and the Edwards Aquifer.”</p>
                                 <p class='div-relative info-quotedby'>Marc Friberg
