Hid links to content sections that are currently broken. Will add back once content sections are fixed.

--- a/app/index.html
+++ b/app/index.html
@@ -61,16 +61,11 @@
             </div>
             <div class="navbar-collapse centered" ng-class="isCollapsed ? 'collapse' : 'in'">
                 <ul class="nav navbar-nav nav-spacing">
-                    <li ng-class="getClass('/geography')"><a href="#/geography">Geography</a>
-                    </li>
-                    <li ng-class="getClass('/geology')"><a href="#/geology">Geology</a>
-                    </li>
-                    <li ng-class="getClass('/springs')"><a href="#/springs">Springs &amp; Species</a>
-                    </li>
-                    <li ng-class="getClass('/conservation')"><a href="#/conservation">Governance &amp; Conservation</a>
-                    </li>
-                    <li><a id="toggle-info-panel" ng-click="togglePanel('#info-panel')"><span class="glyphicon glyphicon-info-sign"></span></a>
-                    </li>
+                    <!-- <li ng-class="getClass('/geography')"><a href="#/geography">Geography</a></li> -->
+                    <!-- <li ng-class="getClass('/geology')"><a href="#/geology">Geology</a></li> -->
+                    <!-- <li ng-class="getClass('/springs')"><a href="#/springs">Springs &amp; Species</a></li> -->
+                    <!-- <li ng-class="getClass('/conservation')"><a href="#/conservation">Governance &amp; Conservation</a></li> -->
+                    <li><a id="toggle-info-panel" ng-click="togglePanel('#info-panel')"><span class="glyphicon glyphicon-info-sign"></span></a></li>
                 </ul>
             </div>
             <div>
