Final edits and commmits to version 1.0.0 of Aquiferium.

--- a/app/index.html
+++ b/app/index.html
@@ -61,10 +61,10 @@
             </div>
             <div class="navbar-collapse centered" ng-class="isCollapsed ? 'collapse' : 'in'">
                 <ul class="nav navbar-nav nav-spacing">
-                    <!-- <li ng-class="getClass('/geography')"><a href="#/geography">Geography</a></li> -->
-                    <!-- <li ng-class="getClass('/geology')"><a href="#/geology">Geology</a></li> -->
-                    <!-- <li ng-class="getClass('/springs')"><a href="#/springs">Springs &amp; Species</a></li> -->
-                    <!-- <li ng-class="getClass('/conservation')"><a href="#/conservation">Governance &amp; Conservation</a></li> -->
+                    <li ng-class="getClass('/geography')"><a href="#/geography">Geography</a></li>
+                    <li ng-class="getClass('/geology')"><a href="#/geology">Geology</a></li>
+                    <li ng-class="getClass('/springs')"><a href="#/springs">Springs &amp; Species</a></li>
+                    <li ng-class="getClass('/conservation')"><a href="#/conservation">Governance &amp; Conservation</a></li>
                     <li><a id="toggle-info-panel" ng-click="togglePanel('#info-panel')"><span class="glyphicon glyphicon-info-sign"></span></a></li>
                 </ul>
             </div>
@@ -174,7 +174,6 @@
     <script src="bower_components/skrollr/src/skrollr.js"></script>
     <script src="bower_components/skrollr-menu/src/skrollr.menu.js"></script>
     <script src="bower_components/gsap/src/uncompressed/TweenMax.js"></script>
-    <script src="bower_components/leaflet/dist/leaflet.js"></script>
     <script src="bower_components/leaflet/dist/leaflet-src.js"></script>
     <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
     <script src="bower_components/angular-leaflet-directive/dist/angular-leaflet-directive.js"></script>
